# homeafford

./: .gitignore  README.md  pyproject.toml
src/homeafford/: __init__.py  affordability.py  affordability_frontier.py  affordability_summary.py  arm_sensitivity.py  check.py  cli.py  dti_analysis.py  dti_params.py  dti_serialize.py  fixed_arm_catalog.py  fixed_arm_timeline.py  loan_programs.py  model.py  mortgage.py  mortgage_scenario.py  piti.py  pmi.py  report.py  savings.py
src/homeafford/market/: __init__.py  assembler.py  base.py  builder.py  (+21 more)
tests/: conftest.py  test_affordability_edge_cases.py  test_affordability_frontier.py  test_affordability_summary.py  test_arm_sensitivity.py  test_calculator_edge_cases.py  test_calculator_edge_matrix.py  test_check.py  test_cli_compare.py  test_cli_metro_trends.py  test_cli_range_report.py  test_cli_report.py  test_core.py  test_dti_analysis.py  test_fixed_arm_catalog.py  test_fixed_arm_timeline.py  test_loan_programs.py  test_market.py  test_market_dimensions.py  test_market_middleware.py  test_metro_price_trends.py  test_metro_trends.py  test_model.py  test_mortgage_scenario.py  test_pmi.py  test_report.py
tests/fixtures/: metro_home_price_trends.csv  metro_home_price_trends_accelerating.csv  metro_home_price_trends_budget.csv  metro_home_price_trends_declining.csv  metro_home_price_trends_premium.csv  metro_home_price_trends_recovering.csv  metro_home_price_trends_sample.csv  metro_home_price_trends_stable.csv
tests/helpers/: __init__.py  calculator_edge_matrix.py  edge_case_catalog.py  metro_price_fixtures.py
(+1 files in other folders)
