[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeafford"
version = "0.1.0"
description = "Personal finance simulator for savings trajectories, mortgage math, and home affordability bands"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Danny", email = "dannywilsonn5@gmail.com" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
homeafford = "homeafford.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
homeafford = ["market/data/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
